--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="author" content="Frazer Jamieson">
+  <meta name="owner" content="Frazer Jamieson">
+  
   <title>Celebrity.Fashion</title>
   <base href="/">
 
