--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="author" content="Frazer Jamieson">
   <meta name="owner" content="Frazer Jamieson">
-  
-  <title>Celebrity.Fashion</title>
+
+  <title>Celebrity Fashion</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
